--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,31 +1,28 @@
 .App {
-  text-align: center;
+  background-color: #282c34;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  
+  min-height: 100vh;
+  min-width: 100vw;
 }
 
+/*
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
 
+.App-link {
+  color: #61dafb;
+}
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
@@ -36,3 +33,4 @@
     transform: rotate(360deg);
   }
 }
+*/
