--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,7 @@
 .App {
   background-color: #282c34;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   
   min-height: 100vh;
